Sometimes drag and drop of URLs causes flicker
Categories
(Core :: Widget: Win32, defect)
Tracking
()
People
(Reporter: emk, Assigned: emk)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
Steps to reproduce:
- Make sure that <localProfileDir\shortcutCache> is empty. I could not find a way to clear this cache from Firefox UI. I deleted icon files directly using File Explorer.
- Navigate to any websites that have a favicon <such as http://mozilla.org>.
- Drag the lock icon from the URL bar to the desktop.
Actual result:
A shortcut to the website will be created with flickering all Windows.
Expected result:
The shortcut should be created, but flickering should not happen.
This flicker is caused because we broadcast a message to update the shortcut icon after we created a favicon image. (See bug 110894.)
Assignee | ||
Comment 1•5 years ago
|
||
I'm using drag and drop very frequently, so this bug is really annoying.
Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
By making the IStream object free-threaded (or "agile"), IStream::Read will be
called off the main thread. So we can wait until favicon is created.
Depends on D56478
Updated•5 years ago
|
Comment 4•5 years ago
|
||
The priority flag is not set for this bug.
:jimm, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•5 years ago
|
Comment 6•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/ba63fdaa83ba
https://hg.mozilla.org/mozilla-central/rev/4010545f6193
Updated•5 years ago
|
Updated•5 years ago
|
Updated•4 years ago
|
Description
•