Bug 1602615 - Add a support for free-threaded IStream to handle Internet shortcuts. r=jmathies

By making the IStream object free-threaded (or "agile"), IStream::Read will be
called off the main thread. So we can wait until favicon is created.

Depends on D56478

Differential Revision: https://phabricator.services.mozilla.com/D56479